Catch that image!

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -267,4 +267,13 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\label{fig:pagalbaGyvai}
 	Nauda: greitas pagalbos naudojantis puslapiu pasiekimas, piktogramą galima nesunkiai patraukti.
 \end{figure}
+\begin{figure}[!htb]
+	\begin{center}
+		\includegraphics[scale=0.5]
+		{account_report.png}
+	\end{center}
+	\caption{Sąskaitos apžvalga}
+	\label{fig:saskaitosApzvalga}
+	Nauda: patraukli ir efektyvi sąskaitos išrašo peržiūra.
+\end{figure}
 \end{document}
