--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -178,7 +178,7 @@ Veiklos trukmė: Mokėjimo ruošinio sukūrimas turėtų užtrukti iki 10 minuč
 	\item Mokėjimo ruošinių lange nėra pasirinkimo sukurti ruošinį pagal buvusius mokėjimus
 	\item Mokėjimo ruošinių paieška galima tik pagal jo pavadinima (tačiau ne pagal gavėją bei mokėjimo paskirtį)
 \end{itemize}
-\subsubsectionnonum{būsimasis patobulintas scenarijus}
+\subsubsectionnonum{Būsimasis patobulintas scenarijus}
 \begin{center}
 	\textbf{Vartotojas norėdamas sukurti mokėjimo ruošinį:}
 \end{center}
@@ -219,7 +219,10 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\item Klientas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų.
 	\item Rinkdamasis gavėją iš pateiktų sąrašų, klientas galės atlikti pavedimą 3 mygtukų paspaudimu.
 	\item Pavedimo atlikimas truks ne ilgiau kaip 2 minutes.
-	\item 95\% klientų iš pirmo karto ras kaip atlikti pavedimą.
+	\item 97\% klientų iš pirmo karto ras kaip atlikti pavedimą.
+	\item Vartotojas mokėjimų išrašo langą pasieks ne per daugiau, nei 2 mygtuko paspaudymus.
+	\item Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio).
+	\item 95\% klientų iš pirmo karto pasirinks norimą datą mokėjimo išrašui gauti.
 \end{itemize}
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
