įdėjau kalendoriau įdėją + dar vienas siekis iš oro

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -223,6 +223,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\item Vartotojas mokėjimų išrašo langą pasieks ne per daugiau, nei 2 mygtuko paspaudymus.
 	\item Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio).
 	\item 95\% klientų iš pirmo karto pasirinks norimą datą mokėjimo išrašui gauti.
+	\item išrašo rezultatus bus galima filtruoti bent 4 būdais.
 \end{itemize}
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
@@ -278,5 +279,14 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\caption{Sąskaitos apžvalga}
 	\label{fig:saskaitosApzvalga}
 	Nauda: patraukli ir efektyvi sąskaitos išrašo peržiūra.
+\end{figure}
+\begin{figure}[!htb]
+	\begin{center}
+		\includegraphics
+		{calendar.png}
+	\end{center}
+	\caption{Datos pasirinkimas}
+	\label{fig:calendar}
+	Nauda: Aiškus, greitas pasirinkimas, nereikia papildomų paspaudimų keičiant tik mėnesį/metus.
 \end{figure}
 \end{document}
