--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -178,7 +178,7 @@ Veiklos trukmė: Mokėjimo ruošinio sukūrimas turėtų užtrukti iki 10 minuč
 	\item Mokėjimo ruošinių lange nėra pasirinkimo sukurti ruošinį pagal buvusius mokėjimus
 	\item Mokėjimo ruošinių paieška galima tik pagal jo pavadinima (tačiau ne pagal gavėją bei mokėjimo paskirtį)
 \end{itemize}
-\subsubsectionnonum{būsimasis patobulintas scenarijus}
+\subsubsectionnonum{Būsimasis patobulintas scenarijus}
 \begin{center}
 	\textbf{Vartotojas norėdamas sukurti mokėjimo ruošinį:}
 \end{center}
@@ -206,6 +206,16 @@ Džiugas nori pažiūrėti kelių paskutinių mėnesių sąskaitos išrašą. Pr
 Veiklos dažnis: Sąskaitos išrašo tikrinimo dažnis varijuoja. Įprasti klientai retai tikrina sąskaitų išrašus. 
 \subsubsectionnonum{Sąskaitos išrašų tikrinimo problemos ir tobulinimo galimybės}
 Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (1). Dėl to kiekvieną kartą norint pakeistį mėnesį, reikės pasirinkti dieną. (Vidutiniškai) patyrusį vartotoją papildomo žingsnio atkartojimas erzins. Taigi tobulintinas aspektas yra numatytosios dienos pridėjimas į išrašo laikotarpio pradžią, kai pasirenkamas mėnuo.
+\subsubsectionnonum{Būsimasis patobulintas scenarijus}
+\begin{center}
+	\textbf{Vartotojas norėdamas peržiūrėti sąskaitos išrašą:}
+\end{center}
+\begin{enumerate}
+	\item Vartotojas prisijungia prie interneto banko
+	\item Vartotojas meniu pasirenka išrašas
+	\item Vartotojas pasirenka norimą mėnesį, o sistema dienos reikšmę nustato „1"
+	\item Vartotojas pasirenka „Pateikti užklausą"
+\end{enumerate}
 \subsection{Panaudojamumo siekiai ir matai}
 \begin{itemize}
 	\item Naudotojas galės filtruoti paieškos rezultatus pagal skirtingas rastas grupes
@@ -219,8 +229,11 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\item Klientas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų.
 	\item Rinkdamasis gavėją iš pateiktų sąrašų, klientas galės atlikti pavedimą 3 mygtukų paspaudimu.
 	\item Pavedimo atlikimas truks ne ilgiau kaip 2 minutes.
-	\item 95\% klientų iš pirmo karto ras kaip atlikti pavedimą.
-\end{itemize}
+	\item 97\% klientų iš pirmo karto ras kaip atlikti pavedimą.
+	\item Vartotojas mokėjimų išrašo langą pasieks ne per daugiau, nei 2 mygtuko paspaudymus.
+	\item Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio).
+	\item 95\% klientų iš pirmo karto pasirinks norimą datą mokėjimo išrašui gauti.
+	\item išrašo rezultatus bus galima filtruoti bent 4 būdais.
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
 \begin{figure}[!htb]
@@ -275,5 +288,14 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\caption{Sąskaitos apžvalga}
 	\label{fig:saskaitosApzvalga}
 	Nauda: patraukli ir efektyvi sąskaitos išrašo peržiūra.
+\end{figure}
+\begin{figure}[!htb]
+	\begin{center}
+		\includegraphics
+		{calendar.png}
+	\end{center}
+	\caption{Datos pasirinkimas}
+	\label{fig:calendar}
+	Nauda: Aiškus, greitas pasirinkimas, nereikia papildomų paspaudimų keičiant tik mėnesį/metus.
 \end{figure}
 \end{document}
