--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -54,7 +54,7 @@ Naudojant į vartotoją orientuotą dizainą palengvinti bei pagerinti Swedbank 
 \subsectionnonum{Dalykinė sritis}
 Internetinė bankininkystė.
 \subsectionnonum{Probleminė sritis}
-Vartotojų patogumo gerinimas, patogus informacijos pateikimas. Sistemos pateikimas aiškenia vartotojo sąsaja.
+Vartotojo grafinės sąsajas patogumo gerinimas, patogus informacijos pateikimas.
 \subsectionnonum{Naudotojai}
 Banko klientas - turi galimybę atlikti mokėjimus, peržiūrėti sąskaitos išrašus, kurti mokėjimo ruošinius, ieškoti reikalingos informacijos.
 \subsectionnonum{Darbo pagrindas}
@@ -64,7 +64,7 @@ Pirmojo laboratorinio darbo reikalavimai.
 \begin{itemize}
 	\item Pirminiai - Banko klientai, betarpiškai naudojasi sistema.
 	\item Antriniai - neegzistuoja.
-	\item Tretiniai - Kiti bankai, kurių klientų skaičių įtakoja šio banko sekmė, bei akcininkai, kurių pajamos priklauso nuo banko sekmės.
+	\item Tretiniai - Kiti bankai, kurių klientų skaičių įtakoja šio banko sekmė, bei akcininkai, kurių pajamos priklauso nuo banko sėkmės.
 \end{itemize}
 \section{Banko klientų poreikiai}
 \subsection{Naudotojų charakteristikos}
@@ -233,7 +233,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\item Vartotojas mokėjimų išrašo langą pasieks ne per daugiau, nei 2 mygtuko paspaudymus.
 	\item Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio).
 	\item 95\% klientų iš pirmo karto pasirinks norimą datą mokėjimo išrašui gauti.
-	\item išrašo rezultatus bus galima filtruoti bent 4 būdais.
+	\item Išrašo rezultatus bus galima filtruoti bent 4 būdais.
 \end{itemize}
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
