Minor lexical fix.

--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -212,7 +212,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 \end{center}
 \begin{enumerate}
 	\item Vartotojas prisijungia prie interneto banko
-	\item Vartotojas meniu pasirenka išrašas
+	\item Vartotojas meniu pasirenka „Išrašas"
 	\item Vartotojas pasirenka norimą mėnesį, o sistema dienos reikšmę nustato „1"
 	\item Vartotojas pasirenka „Pateikti užklausą"
 \end{enumerate}
