--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -70,7 +70,7 @@ Pirmojo laboratorinio darbo reikalavimai.
 \subsection{Naudotojų charakteristikos}
 \subsubsection{Informacinių technologijų priemonės}
 \begin{itemize}
-	\item Išmanusis telefonas (naršyklė bei smard-id).
+	\item Išmanusis telefonas (naršyklė bei Smart-ID).
 	\item Mobilusis parašas.
 	\item Asmeninių kompiuterių naršyklės.
 	\item Planšetinių kompiuterių naršyklės.
