--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -233,11 +233,8 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 	\item Vartotojas galės mokėjimo ruošinių ieškoti pagal pavadinimą, gavėją bei mokėjimo paskirtį
 	\item Mokėjimo ruošinio sukurimo langą vartotojas galės pasiekti ne per daugiau, negu 3 mygtukų paspaudimus.
 	\item Kurdamas mokėjimo ruošinį vartotojas gaus bent 2 pasirinkimus jam sukurti.
-	\item Klientas galės įvesti sumą bei pradėti pavedimą pagrindiniame lange.
-	\item Klientas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų.
-	\item Rinkdamasis gavėją iš pateiktų sąrašų, klientas galės atlikti pavedimą 3 mygtukų paspaudimu.
-	\item Pavedimo atlikimas truks ne ilgiau kaip 2 minutes.
-	\item 97\% vidutiniškai patyrusių klientų iš pirmo karto ras kaip atlikti pavedimą.
+	\item Vartotojas galės įvesti sumą bei pradėti pavedimą pagrindiniame lange.
+	\item Vartotojas galės pasirinkti gavėją iš gavėjų arba ankstesnių gavėjų sąrašų.
 	\item Vartotojas mokėjimų išrašo langą pasieks ne per daugiau, nei 2 mygtuko paspaudymus.
 	\item Mokėjimo išrašo datos apsibrėžime nebus būtina pasirinkti dieną (užteks mėnesio).
 	\item 97\% patyrusių klientų iš pirmo karto pasirinks norimą datą mokėjimo išrašui gauti.
@@ -245,7 +242,8 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 \end{enumerate}
 	\textbf{Naujokų:}
 \begin{enumerate}[resume]
-  \item
+	\item Gebės atlikti pavedimą per ne ilgiau kaip 2 minutes.
+	\item 97% vartotojų gebės pirmu bandymu rasti pavedimo atlikimo funkciją.
 \end{enumerate}
 	\textbf{Vidutiniškai patyrusių:}
 \begin{enumerate}[resume]
@@ -253,7 +251,7 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 \end{enumerate}
 \textbf{Patyrusių:}
 \begin{enumerate}[resume]
-	\item
+	\item Vartotojas, rinkdamasis gavėją iš pateiktų sąrašų, gebės atlikti pavedimą 3 mygtukų paspaudimu.
 \end{enumerate}
 \pagebreak
 \section{Įkvepiančios esamų interfeisų idėjos}
