--- a/ZKS1.tex
+++ b/ZKS1.tex
@@ -242,8 +242,8 @@ Pasirinkus laikotarpio pradžios mėnesį nėra numatytosios dienos reikšmės (
 \end{enumerate}
 	\textbf{Naujokų:}
 \begin{enumerate}[resume]
-	\item Gebės atlikti pavedimą per ne ilgiau kaip 2 minutes.
-	\item 97% vartotojų gebės pirmu bandymu rasti pavedimo atlikimo funkciją.
+	\item Vartotojas gebės atlikti pavedimą per ne ilgiau kaip 2 minutes.
+	\item 97% vartotojų gebės pirmu bandymu rasti mokėjimo pavedimo funkciją.
 \end{enumerate}
 	\textbf{Vidutiniškai patyrusių:}
 \begin{enumerate}[resume]
